--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,16 @@
-* {
+/* universal */
+
+*   {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
+/*body */
 body {
     background-color: #d9dcd6;
 }
+
+/*header*/
 
 .header {
     padding: 20px;
@@ -40,15 +44,26 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
+/* End header */
+
+/*anchor*/
 
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+/*end anchor*/
+
+/*paragraph*/
+
 p {
     font-size: 16px;
+
 }
+
+/*end paragraph*/
+
 /* hero styling */
 .hero {
     height: 800px;
@@ -86,55 +101,27 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3   {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
 /*image styling*/
-.benefit-lead img {
+.benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+
+/*end image styling*/
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+ /*Link appearance*/
+.search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -142,51 +129,21 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
+/*end Link appearance*/
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+/*image height*/
+.search-engine-optimization img, .online-reputation-management img, social-media-marketing img  {
     max-height: 200px;
 }
+/*end image height*/
 
-.online-reputation-management img {
-    max-height: 200px;
-}
+/*h2 margin and font size*/
 
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2  {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 /* Begin footer styling*/
 .footer {
     padding: 30px;
@@ -198,4 +155,4 @@ p {
 .footer h2 {
     font-size: 20px;
 }
-/*footer styling end*/
+/* end footer styling */
