--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+/* end universal*/
 }
 /*body */
 body {
@@ -64,7 +65,7 @@ p {
 
 /*end paragraph*/
 
-/* hero styling */
+/* hero */
 .hero {
     height: 800px;
     width: 100%;
@@ -89,7 +90,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
+/* benefits*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -111,16 +112,12 @@ p {
     text-align: center;
 }
 
-/*image styling*/
 .benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-
-/*end image styling*/
 }
-
- /*Link appearance*/
+ 
 .search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -129,22 +126,18 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-/*end Link appearance*/
 
-/*image height*/
 .search-engine-optimization img, .online-reputation-management img, social-media-marketing img  {
     max-height: 200px;
 }
-/*end image height*/
-
-/*h2 margin and font size*/
 
 .search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2  {
     margin-bottom: 20px;
     font-size: 36px;
 }
+/*end benefits*/
 
-/* Begin footer styling*/
+/*footer styling*/
 .footer {
     padding: 30px;
     clear: both;
@@ -156,3 +149,4 @@ p {
     font-size: 20px;
 }
 /* end footer styling */
+/*end body*/
